syntax = "proto3";

package UserServiceProto;

service UserService {
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc GetUserList(Empty) returns (UserListResponse);
}

message Empty{

}
message User {
    int32 userId = 1;
    string name = 2;
    int32 age = 3;
    string userName = 4;
    bool isActive = 5;
}

message GetUserRequest {
    int32 userId = 1;
}
message UserResponse {
    User user = 1;
}
message UserListResponse {
    repeated User users=1;
}